feat: add profile controller
