# www/app/Http/Controllers/Controller.php
@@ -7,6 +7,15 @@ use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
+/**
+ * @OA\Server(url="http://localhost/api"),
+ * @OA\Info(title="Sistema de pagamento simplificado", version="0.0.1")
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     scheme="bearer",
+ *     securityScheme="bearerAuth",
+ * )
+ */
 class Controller extends BaseController
 {
     use AuthorizesRequests;
