# www/routes/api.php
@@ -3,7 +3,9 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\ProfileController;
 use App\Http\Controllers\Api\TransactionController;
+use App\Http\Controllers\Api\UserController;
 
 /*
 |--------------------------------------------------------------------------
@@ -16,12 +18,10 @@ use App\Http\Controllers\Api\TransactionController;
 |
 */
 
-Route::post('/login', [AuthController::class, 'authenticate'])->name('user.login');
-Route::post('/register', [AuthController::class, 'register'])->name('user.register');
+Route::post('/login', [AuthController::class, 'authenticate'])->name('auth.login');
+Route::post('/register', [AuthController::class, 'register'])->name('auth.register');
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::resource('transaction', TransactionController::class, ['only' => 'store']);
-    Route::get('/user', function (Request $request) {
-        return $request->user();
-    });
+    Route::resource('profile', ProfileController::class, ['only' => 'index']);
 });
